welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:4: error: identifier expected but '(' found.
    if (nums.(i)>maxi){
             ^maxValue:5: error: identifier expected but '(' found.
      maxi=nums.(i)
                ^